Bug 169: Cambio z-index main.css para el menu flotante - Ajuste

--- a/siente/web/configuracion/aquacun/resources/cssepc/main.css
+++ b/siente/web/configuracion/aquacun/resources/cssepc/main.css
@@ -2533,7 +2533,7 @@ css usuario modificacion
     border-color: #6B6B6B;
     position: relative;
     top: 0px;
-    z-index: 1000;
+    z-index: 100;
     border-bottom: solid 1px #F2F2F2;
 }
 
